Fix codeblock bottom spacing

--- a/src/github-markdown-css/github-markdown-light.css
+++ b/src/github-markdown-css/github-markdown-light.css
@@ -567,6 +567,10 @@
   margin-bottom: 16px;
 }
 
+.markdown-body pre {
+  padding-bottom: 16px;
+}
+
 .markdown-body blockquote>:first-child {
   margin-top: 0;
 }
